# vmapplet

./: .flake8  .gitignore  CHANGES.md  CMakeLists.txt  README.md  TODO.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml  test.yml
binder/: apt.txt  environment.yml  postBuild
notebooks/: cppyy_perf.ipynb  hsm.ipynb  leaf_area.ipynb  markov.ipynb  optimization.ipynb  organ_growth.ipynb  simple_simulation.ipynb  simulation.ipynb  simulation.toml  stocatree-parameters.ipynb  stocatree.ipynb  trunk_radius.ipynb  vmapplet_lpy.ipynb
notebooks/cppyy/: hsm.ipynb  optimization.ipynb
notebooks/digitized_leaves/: branche_digit_fuji_feuilles.csv  branches.csv  leaf_angles.ipynb  leaves.csv  plot.ipynb
notebooks/xsimlab/: geometry.lpy  process_test.ipynb  topology.lpy
paper/: paper.bib  paper.md
test/: test_apex.py  test_colors.py  test_fruit.py  test_leaf.py  test_metamer.py  test_physics.py  test_random.py  test_read_function.py  test_sequences.py  test_surface.py  test_tree.py  test_v3d.py  test_wood.py
test/cppyy/: README.md  optimization.ipynb
test/notebooks/: markov.ipynb
vmapplet/: MAppleT.lpy  __init__.py  __main__.py  _cppyy.py  colors.py  constants.py  enums.py  frame.py  interception.py  markov.py  non_optimised.py  optimisation.py  optimisation.pyx  optimization.h  options.py  output.py  physics.py  pipe.py  sequences.py  simulation.py  srandom.py  stocatree.lpy  temperature_effects.py  vmapplet.lpy
vmapplet/data/: lpy.json  simulation.toml  stocatree.ini  stocatree.toml  temperature_data.csv
vmapplet/data/lpy/: lpy.json
vmapplet/data/markov/: fuji_long_year_1.toml  fuji_long_year_2.toml  fuji_long_year_5.toml  fuji_medium_year_3.toml  fuji_medium_year_4.toml  fuji_medium_year_5.toml
vmapplet/data/trunk/: sequences.seq
vmapplet/lpy/: axiom.lpy  interpretation.lpy  mechanics_backward.lpy  mechanics_forward.lpy  parameters.lpy  physics.lpy  statistics.lpy  structure.lpy
vmapplet/organs/: __init__.py  apex.py  fruit.py  growth_unit.py  internode.py  leaf.py  metamer.py  tree.py  wood.py
vmapplet/plantik/simulation/: __init__.py  simulation.py
vmapplet/structure_analysis/: CMakeLists.txt  README.md  __init__.py
vmapplet/structure_analysis/notebooks/: cppyy.ipynb
vmapplet/structure_analysis/src/: markov.h
vmapplet/structure_analysis/src/sequence_analysis/: CMakeLists.txt
vmapplet/structure_analysis/src/stat_tool/: CMakeLists.txt  continuous_parametric.cpp  continuous_parametric_process.cpp
vmapplet/tools/: README.md  csv.py  data_process.py  dotdict.py  file_tools.py  lsystems.py  read_function.py  rw_tools.py  simulation.py  surface.py
vmapplet/tools/structure_analysis/: CMakeLists.txt  README.md  markov.h
vmapplet/tools/structure_analysis/notebooks/: cppyy.ipynb
vmapplet/tools/structure_analysis/src/sequence_analysis/: CMakeLists.txt
vmapplet/tools/structure_analysis/src/stat_tool/: CMakeLists.txt
(+14 files in other folders)
